samples/_failures_safe/1761213175_b96b49_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_ea868dce.c: In function ‘bfs_traversal’:
./samples/SAFE/__tmp_ea868dce.c:156:36: error: expected ‘)’ at end of input
  156 |     if (fgets(buffer, sizeof(buffer
      |                             ~      ^
      |                                    )
./samples/SAFE/__tmp_ea868dce.c:156:9: error: too few arguments to function ‘fgets’
  156 |     if (fgets(buffer, sizeof(buffer
      |         ^~~~~
In file included from /usr/include/stdio.h:980,
                 from ./samples/SAFE/__tmp_ea868dce.c:2:
/usr/include/x86_64-linux-gnu/bits/stdio2.h:196:1: note: declared here
  196 | fgets (char *__restrict __s, int __n, FILE *__restrict __stream)
      | ^~~~~
./samples/SAFE/__tmp_ea868dce.c:156:5: error: expected declaration or statement at end of input
  156 |     if (fgets(buffer, sizeof(buffer
      |     ^~
